# snakemake-executor-plugin-slurm

./: .gitignore  .gitpod.yml  CHANGELOG.md  LICENSE  README.md  TODO.md  build.py  cleanup_wheel.py  pyproject.toml  setup.cfg  test.sh  upgrade_dependencies.py
.github/: pr-types.yml  releases.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: check_upstream_release.py  merge_test.sh
.github/workflows/: announce-release.yml  bump-and-tag.yml  check-upstream-release.yml  ci.yml  conventional-prs.yml  post_to_mastodon.sh  post_to_mastodon.yml  pypi-release.yml  pypi-release.yml.disabled  release-please.yml  release.yml  sync-upstream.yml  sync-upstream.yml.disabled
docs/: further.md  intro.md  profile.md  tests.md
snakemake_executor_plugin_cannon/: __init__.py  cannon.py  efficiency_report.py  submit_string.py  utils.py
snakemake_executor_plugin_slurm/: __init__.py  accounts.py  cli.py  efficiency_report.py  job_cancellation.py  job_status_query.py  partitions.py  submit_string.py  utils.py  validation.py
tests/: Snakefile  test_account.py  test_array_jobs.py  test_array_status_lookup.py  test_cli.py  test_jobsignalling.py  test_parsing.py  test_partition_query.py  test_partition_selection.py  test_pass_command_as_script.py  test_scontrol_parsing.py  test_time_conversion.py  tests.py
tests/cannon-test-profile/: config.yaml
tests/profiles/cannon/: config.yaml
tests/testcases/array_jobs/: Snakefile
tests/testcases/slurm_signal/: Snakefile  handle_signal.py  handle_signal.sh
