[tool.poetry]
name = "snakemake-executor-plugin-slurm"
version = "1.6.1"
description = "A Snakemake executor plugin for submitting jobs to a SLURM cluster."
authors = [
    "Christian Meesters <meesters@uni-mainz.de>",
    "David Lähnemann <david.laehnemann@dkfz-heidelberg.de>",
    "Johannes Koester <johannes.koester@uni-due.de>",
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/snakemake/snakemake-executor-plugin-slurm"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/executor/slurm.html"
keywords = ["snakemake", "plugin", "executor", "cluster", "slurm"]

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.21.0"
snakemake-interface-executor-plugins = "^9.3.9"
snakemake-executor-plugin-slurm-jobstep = "^0.3.0"
pandas = "^2.2.3"
numpy = ">=1.26.4, <3"
throttler = "^1.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
coverage = "^7.3.1"
pytest = "^8.3.5"
snakemake = "^9.6.0"
pandas = "^2.2.3"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "Snakefile"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
