[tool.poetry]
name = "snakemake-executor-plugin-slurm"
version = "2.1.0"
description = "A Snakemake executor plugin for submitting jobs to a SLURM cluster."
authors = [
    "Christian Meesters <meesters@uni-mainz.de>",
    "David Lähnemann <david.laehnemann@dkfz-heidelberg.de>",
    "Johannes Koester <johannes.koester@uni-due.de>",
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/snakemake/snakemake-executor-plugin-slurm"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/executor/slurm.html"
keywords = ["snakemake", "plugin", "executor", "cluster", "slurm"]
packages = [
    { include = "snakemake_executor_plugin_slurm", from = "." }
]
include = [
    { path = "snakemake_executor_plugin_slurm/_core*.so", format = "wheel" },
    { path = "snakemake_executor_plugin_slurm/__init__.py", format = "wheel" }
]


[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.21.0"
snakemake-interface-executor-plugins = "^9.3.9"
snakemake-executor-plugin-slurm-jobstep = "^0.4.0"
pandas = ">=2.2.3, <=3.0.0"
numpy = ">=2.4.2, <3"
throttler = "^1.2.2"
Cython = "^3.2.4"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^6.1.0"
coverage = "^7.3.1"
pytest = "^8.3.5"
snakemake = "^9.6.0"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "Snakefile"]

[tool.black]
line-length = 88

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = ["poetry-core", "setuptools", "Cython>=3.2.4", "wheel"]
build-backend = "poetry.core.masonry.api"
