[tool.poetry]
name = "snakemake-executor-plugin-slurm"
version = "2.6.1"
description = "A Snakemake executor plugin for submitting jobs to a SLURM cluster."
authors = [
    "Christian Meesters <meesters@uni-mainz.de>",
    "David Lähnemann <david.laehnemann@dkfz-heidelberg.de>",
    "Johannes Koester <johannes.koester@uni-due.de>",
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/snakemake/snakemake-executor-plugin-slurm"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/executor/slurm.html"
keywords = ["snakemake", "plugin", "executor", "cluster", "slurm"]

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = ">=1.23.0,<2"
snakemake-interface-executor-plugins = ">=9.4.0,<10"
snakemake-executor-plugin-slurm-jobstep = ">=0.6.0,<1"
pandas = ">=2.3.3,<3"
numpy = ">=2.4.5,<3"
throttler = ">=1.2.3,<2"
pyyaml = ">=6.0.3,<7"

[tool.poetry.group.dev.dependencies]
black = ">=23.12.1,<27"
flake8 = ">=6.1.0,<7"
coverage = ">=7.14.0,<8"
pytest = ">=8.4.2,<9"
snakemake = ">=9.21.0,<10"
pandas = ">=2.3.3,<3"

[tool.poetry.scripts]
generate-slurm-partition-config = "snakemake_executor_plugin_slurm.cli:main"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "Snakefile"]

[tool.black]
line-length = 88
extend-exclude = 'tests/test_scontrol_parsing\.py'

[tool.pytest.ini_options]
python_files = ["test_*.py", "tests.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
